# Cashflow_forecast

./: README.md  pyproject.toml  requirements.txt
cashflow_forecast/api/: main.py
cashflow_forecast/models/: forecasting.py
frontend/: package.json
frontend/src/: App.jsx
